liblua-cqueues (20131204-0) unstable; urgency=low

  * Obey SOCK_DGRAM sematics in input byte buffering code.
  * Implement slurp operation.

 -- William Ahern <william@25thandClement.com>  Sun, 04 Dec 2013 11:41:39 -0800

liblua-cqueues (20131023-0) unstable; urgency=low

  * Fix bug which cleared O_NONBLOCK flag on thread descriptors.
  * Fix thread entry function loading for Lua 5.1/LuaJIT.

 -- William Ahern <william@25thandClement.com>  Wed, 23 Oct 2013 19:36:06 -0700

liblua-cqueues (20130909-0) unstable; urgency=low

  * Refactor build to be non-recursive.
  * Integrate luapath script from external fork.
  * Follow Debian naming conventions for multi-version Lua modules.
  * Separate cqueues and openssl modules into two independent packages.

 -- William Ahern <william@25thandClement.com>  Mon, 09 Sep 2013 14:46:25 -0700

lua-cqueues (20130129-0) unstable; urgency=low

  * Bind interface for acquiring DNS resolver statistics.

 -- William Ahern <william@25thandClement.com>  Tue, 29 Jan 2013 17:19:28 -0800

lua-cqueues (20130106-0) unstable; urgency=low

  * Initial debian build.

 -- William Ahern <william@25thandClement.com>  Mon, 07 Jan 2013 05:00:48 -0000