@@ -1,0 +1,3 @@
+local ctx = require"_openssl.rand"
+
+return ctx
